Add JMH benchmark (#7)